--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "vite": "^5.0.0"
     },
     "dependencies": {
-        "@meforma/vue-toaster": "^1.3.0"
+        "@meforma/vue-toaster": "^1.3.0",
+        "vue-router": "^4.4.0"
     }
 }
